--- a/webpage/docs/UDS/02_services/10_Communication-Control.mdx
+++ b/webpage/docs/UDS/02_services/10_Communication-Control.mdx
@@ -1,3 +1,11 @@
+---
+id: communication-control
+title: Communication Control - 0x28
+---
+
+import plantumlEncoder from 'plantuml-encoder';
+import PlantUML from '@site/src/components/PlantUML';
+
 
 # Communication Control - 0x28
 
