--- a/webpage/docs/UDS/02_services/12_Request-File-Transfer.mdx
+++ b/webpage/docs/UDS/02_services/12_Request-File-Transfer.mdx
@@ -1,3 +1,10 @@
+---
+id: request-file-transfer
+title: Request File Transfer - 0x38
+---
+
+import plantumlEncoder from 'plantuml-encoder';
+import PlantUML from '@site/src/components/PlantUML';
 
 # Request File Transfer - 0x38
 
